# williamzujkowski.github.io

./: .build-baseline.json  .claude-rules.json  .editorconfig  .eleventy.cjs  .eleventy.cjs.bak  .eleventy.fix-feed.cjs  .eleventy.js  .eleventy.patched.cjs  .eleventy.rss-fixed.cjs  .eleventy.simple.cjs  .env.example  .eslintrc.json  .gitconfig  .gitignore  .gitleaks.toml  .gitmodules  .lighthouserc.json  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  404.html  AGENTS.md  BLOG-POST-README.md  BLOG-WORKFLOW.md  BLOG_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  Exploring the Horizons of Science Fiction Literature in 2025.md  FILE_TREE.md  HIVE_MIND_FINAL_REPORT.md  IMAGE_OPTIMIZATION_ANALYSIS.md  IMAGE_OPTIMIZATION_SESSION47.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CODER2.md  LICENSE  LOGGING_MIGRATION_SUMMARY.txt  MAINTENANCE.md  (+125 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.llmconfig/: CLAUDE.md  agent-rules.md  loaders.js
.manifest/: MANIFEST.optimized.json  file-registry.json  llm-interfaces.json
.rules/: nexus-agents.md
Prompts/: blog-guidelines.md  blogpost.prompt  post-template.md  threat-blog-post-rag.prompt  threat-blog-post.prompt
_data/: arxiv-feed.json  books.json  contribution-heatmap.json  current-reading.json  current-reading.json.bak  github-pins.json  link-previews-artists.json  link-previews-creative.json  link-previews-fun__curiosities.json  link-previews-gaming.json  link-previews-miscellaneous.json  link-previews-music.json  link-previews-people.json  link-previews-rollerblading.json  link-previews-social.json  link-previews.json
_includes/: about-me.njk  arxiv-papers.njk  footer.njk  github-pins.njk  header.njk  layout.njk  meta.njk  page-header.njk  post-list-item.njk  terminal.njk  year.cjs
_layouts/: base.njk  post.njk
about/: index.html
archives/: index.html
astro-site/: .prettierrc  DESIGN-DEVIATIONS.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml
blog/:  post1.html  ai-the-new-frontier-in-cybersecurity-opportunities-and-ethical-dilemmas.html  ai-vs-ai-cyberwar.html  chatgpt-writes-malware.html  cloud-migration-a-guide-to-navigating-your-journey-to-the-cloud.html  demystifying-cryptography-a-beginners-guide-to-encryption-hashing-and-digital-signatures.html  fridge-went-rogue.html  index.html  mastering-prompt-engineering-unlocking-the-full-potential-of-llms.html  open-source-vs-proprietary-llms-a-battle-of-accessibility-customization-and-community.html  preparing-for-the-quantum-leap-a-guide-to-quantum-resistant-cryptography.html  quantum-leap-hacking.html  retrieval-augmented-generation-rag-enhancing-llms-with-external-knowledge.html  securing-the-cloud-native-frontier-a-guide-to-cloud-native-security.html  the-deepfake-dilemma-navigating-the-threat-of-ai-generated-deception.html  the-ethics-of-large-language-models.html  the-intersection-of-ai-and-edge-computing.html  the-pizza-calculator-a-developers-best-friend-during-crunch-time.html  the-transformer-architecture-a-deep-dive.html  understanding-context-windows-in-llms.html  writing-secure-code-a-developers-guide-to-thwarting-security-exploits.html  zero-trust-office.html
categories/: index.html  index.xml
config/: .eleventy.cjs  .eleventy.simple.cjs  postcss.config.cjs  site.webmanifest  tailwind.config.cjs
content/: readme.md
diagram_templates/: 2024-08-27-zero-trust-security-principles_diagrams.md  2025-02-10-automating-home-network-security_diagrams.md  2025-03-10-raspberry-pi-security-projects_diagrams.md  2025-06-25-local-llm-deployment-privacy-first_diagrams.md  2025-07-01-ebpf-security-monitoring-practical-guide_diagrams.md  2025-07-08-implementing-dns-over-https-home-networks_diagrams.md  2025-07-15-vulnerability-management-scale-open-source_diagrams.md  2025-08-07-supercharging-development-claude-flow_diagrams.md  2025-09-08-zero-trust-vlan-segmentation-homelab_diagrams.md  2025-09-14-threat-intelligence-mitre-attack-dashboard_diagrams.md  2025-09-29-proxmox-high-availability-homelab_diagrams.md  2025-10-06-automated-security-scanning-pipeline_diagrams.md
(+1911 files in other folders)
