[project]
name = "williamzujkowski-blog"
version = "1.0.0"
description = "William Zujkowski's personal blog and portfolio - automation scripts and content management"
requires-python = ">=3.11"
authors = [
    {name = "William Zujkowski", email = "william@zujkowski.com"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # HTTP client for link validation CI pipeline
    "aiohttp>=3.9.0",
    "certifi>=2023.0.0",

    # Progress bars for batch link validation
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Code quality
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
